<resources>
    <string name="app_name">ProyectoMarket</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_productos">Productos</string>
    <string name="menu_carrito">Mi Carrito</string>
    <string name="menu_pedidos">Mis Pedidos</string>
    <string name="menu_cuentauser">Mi Cuenta</string>
    <string name="menu_pedidodetalle">Detalle del pedido</string>
    <string name="menu_mapa">Mapa/Ubicación</string>
    <string name="menu_cerrarsesion">Cerrar sesión</string>
</resources>